--- a/index.html
+++ b/index.html
@@ -4,12 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Page</title>
+    <title>The Basic Language of the Web: HTML</title>
   </head>
   <body>
     <h1>📘 THE CODE MAGAZINE</h1>
 
+    <nav>
+      <a href="file:///C:/Users/vgmil/OneDrive/Documents/GitHub/HTML-CSS/blog.html">Blog</a>
+      <a href="">Challenges</a>
+      <a href="">Flexbox</a>
+      <a href="">CSS</a>
+      <a href="">Grid</a>
+    </nav>
+    
+    <p>Test Paragraph</p>
+
+
+
+    <img src="img/laura-jones.jpg" alt="laura Jones" width="50" height="50">
+
     <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
+    <img src="img/post-img.jpg" alt="HTML code on a screen" width="500" height="200">
     <h2>The Basic Language of the Web: HTML</h2>
     <p>
       All modern websites and web applications are built using three <em>fundamental </em>technologies: HTML, CSS and JavaScript. These are the languages of the web.
@@ -38,6 +53,34 @@
       <li>The actual element</li>
     </ol>
 
+    <p>You can lear more at the <a href="https://developer.mozilla.org/en-US/">MDN Web Docs.</a></p>
+
+    <h3>Why should you learn HTML?</h3>
+
+    <p>There are contless reasons for learing the fundamental language of the web. here are 5 of them:</p>
+
+    <ul>
+      <li>To be able to use the fundamental web dev language</li>
+      <li>To hand-craft beautiful websites instead of relying on tools like Worpress or Wix</li>
+      <li>To build web applications</li>
+      <li>To impress friends</li>
+      <li>To have fun 😃</li>
+    </ul>
+
+    <p>Hopefully you learned something new here. See you next time!</p>
+
+    <aside>
+      <h4>RELATED POST</h4>
+
+      <ul>
+        <li><img src="img/related-1.jpg" alt="guy-coding" height="50" width="50"></li><a href="#">How to learn Web Developmet</a>
+        <p>By Jonas Schmedtmann</p>
+        <li><img src="img/related-2.jpg" alt="" height="50" width="50"></li><a href="#">The Unknown Powers of CSS</a>
+        <p>By Jim Dillon</p>
+        <li><img src="img/related-3.jpg" alt="" height="50" width="50"></li><a href="#">Why JavaScript is Awsome</a>
+        <p>By Matilda</p>
+      </ul>
+    </aside>
 
   </body>
 </html>
