--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>The Basic Language of the Web: HTML</title>
   </head>
   <body>
+    <header>
     <h1>📘 THE CODE MAGAZINE</h1>
 
     <nav>
@@ -16,16 +17,16 @@
       <a href="">CSS</a>
       <a href="">Grid</a>
     </nav>
-    
+    </header>
     <p>Test Paragraph</p>
-
-
+    <article>
+    <h2>The Basic Language of the Web: HTML</h2>
 
     <img src="img/laura-jones.jpg" alt="laura Jones" width="50" height="50">
 
     <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
     <img src="img/post-img.jpg" alt="HTML code on a screen" width="500" height="200">
-    <h2>The Basic Language of the Web: HTML</h2>
+    
     <p>
       All modern websites and web applications are built using three <em>fundamental </em>technologies: HTML, CSS and JavaScript. These are the languages of the web.
     </p>
@@ -68,7 +69,7 @@
     </ul>
 
     <p>Hopefully you learned something new here. See you next time!</p>
-
+  </article>
     <aside>
       <h4>RELATED POST</h4>
 
@@ -81,6 +82,8 @@
         <p>By Matilda</p>
       </ul>
     </aside>
-
+    <footer>
+      Copyright &copy; 2027 by Code Magazine.
+    </footer>
   </body>
 </html>
