--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
       <a href="">CSS</a>
       <a href="">Grid</a>
     </nav>
-    </header>
     <p>Test Paragraph</p>
+    </header>
+    
     <article>
     <h2>The Basic Language of the Web: HTML</h2>
 
     <img src="img/laura-jones.jpg" alt="laura Jones" width="50" height="50">
 
-    <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
+    <p id="author">Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
     <img src="img/post-img.jpg" alt="HTML code on a screen" width="500" height="200">
     
     <p>
@@ -74,17 +75,20 @@
     <aside>
       <h4>RELATED POST</h4>
 
-      <ul>
-        <li><img src="img/related-1.jpg" alt="guy-coding" height="50" width="50"></li><a href="#">How to learn Web Developmet</a>
-        <p>By Jonas Schmedtmann</p>
-        <li><img src="img/related-2.jpg" alt="" height="50" width="50"></li><a href="#">The Unknown Powers of CSS</a>
-        <p>By Jim Dillon</p>
-        <li><img src="img/related-3.jpg" alt="" height="50" width="50"></li><a href="#">Why JavaScript is Awsome</a>
-        <p>By Matilda</p>
+      <ul class="related">
+        <li>
+          <img src="img/related-1.jpg" alt="guy-coding" height="50" width="50"></li><a href="#">How to learn Web Developmet</a>
+        <p class="related-author">By Jonas Schmedtmann</p>
+        <li>
+          <img src="img/related-2.jpg" alt="" height="50" width="50"></li><a href="#">The Unknown Powers of CSS</a>
+        <p class="related-author">By Jim Dillon</p>
+        <li>
+          <img src="img/related-3.jpg" alt="" height="50" width="50"></li><a href="#">Why JavaScript is Awsome</a>
+        <p class="related-author">By Matilda</p>
       </ul>
     </aside>
     <footer>
-      Copyright &copy; 2027 by Code Magazine.
+      <p id="copyright">Copyright &copy; 2027 by Code Magazine.</p>
     </footer>
   </body>
 </html>
