--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       In HTML, each element is made up of 3 parts:
     </p>
     <ol>
-      <li>The opening tag</li>
+      <li class="first-li">The opening tag</li>
       <li>The closing tag </li>
       <li>The actual element</li>
     </ol>
@@ -63,7 +63,7 @@
     <p>There are contless reasons for learing the fundamental language of the web. here are 5 of them:</p>
 
     <ul>
-      <li>To be able to use the fundamental web dev language</li>
+      <li class="first-li">To be able to use the fundamental web dev language</li>
       <li>To hand-craft beautiful websites instead of relying on tools like Worpress or Wix</li>
       <li>To build web applications</li>
       <li>To impress friends</li>
